added tailwind css

--- a/web/templates/home.tmpl
+++ b/web/templates/home.tmpl
@@ -7,5 +7,8 @@
 {{define "content"}}
 <div>
     <h1>Home</h1>
+    <p>Welcome {{.User}}!</p>
+    <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 rounded">Delete</button>
+    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-2 rounded">Add</button>
 </div>
 {{end}}
