--- a/web/templates/base.tmpl
+++ b/web/templates/base.tmpl
@@ -6,10 +6,11 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="/static/img/icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/styles.css">
     <title>{{template "title" .}}</title>
 </head>
 <body>
-    
+    {{template "content" .}}
 </body>
 </html>
 
