added initial home page and login page

--- a/web/templates/base.tmpl
+++ b/web/templates/base.tmpl
@@ -10,7 +10,12 @@
     <title>{{template "title" .}}</title>
 </head>
 <body>
-    {{template "content" .}}
+    {{if not .HideNavbar}}
+        {{template "navbar" .}}
+    {{end}}
+    <main>
+        {{template "content" .}}
+    </main>    
 </body>
 </html>
 
