--- a/web/templates/navbar.tmpl
+++ b/web/templates/navbar.tmpl
@@ -12,8 +12,7 @@
             <div class="hidden md:flex items-center space-x-1">
                 <a href="/" class="py-4 px-2 text-white font-semibold hover:text-pink-300 transition duration-300">Home</a>
                 <a href="/widgets" class="py-4 px-2 text-white font-semibold hover:text-pink-300 transition duration-300">Widgets</a>
-                <a href="/" class="py-4 px-2 text-white font-semibold hover:text-pink-300 transition duration-300">About</a>
-                <a href="/" class="py-4 px-2 text-white font-semibold hover:text-pink-300 transition duration-300">Contact</a>
+                <a href="/api/logout" class="py-4 px-2 text-white font-semibold hover:text-pink-300 transition duration-300">Logout</a>
             </div>
         </div>
     </div>
