--- a/web/templates/base.tmpl
+++ b/web/templates/base.tmpl
@@ -17,6 +17,10 @@
         <main>
             {{template "content" .}}
         </main>
+    {{else if .ErrorOccurred}}
+        <main>
+            {{template "content" .}}
+        </main>        
     {{else }}
 
         <div class="bg-gray-100 min-h-screen flex items-center justify-center">
