--- a/web/templates/profile.tmpl
+++ b/web/templates/profile.tmpl
@@ -6,8 +6,8 @@
 
 {{define "content"}}
 
-<div class="bg-gray-100 min-h-screen flex items-center justify-center">
-  <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-lg mx-2">
+<div class="bg-gray-100 min-h-screen flex justify-center">
+  <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-4xl mx-3 my-8">
     <div class="flex items-center space-x-6 mb-8">
       <div>
         <h2 class="text-2xl font-bold">{{.User.FirstName}} {{.User.LastName}}</h2>
