--- a/web/templates/base.tmpl
+++ b/web/templates/base.tmpl
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/static/img/icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/tailwind-styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <title>{{template "title" .}}</title>
 </head>
 <body>
@@ -24,15 +25,16 @@
     {{else }}
 
         <div class="bg-gray-100 min-h-screen flex items-center justify-center">
-            <div class="bg-white rounded-xl shadow-md px-8 py-10 max-w-md w-full text-center">
-            <h1 class="text-2xl font-bold text-gray-800 mb-4">Welcome to Web App</h1>
-            <p class="text-gray-600 mb-8">Please log in to continue.</p>
-            <a href="/api/login"
-                class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-6 rounded transition-colors duration-200"
-                onclick="window.location.href='/api/login'"
-            >
-                Login
-            </a>
+            <div class="bg-white rounded-xl shadow-md px-8 py-10 mx-3 max-w-md w-full text-center flex flex-col items-center justify-center">
+                <img src="/static/img/icon.svg" alt="Widgets Icon" class="h-10 w-10 mb-4"/>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Welcome to Widget Web App</h1>
+                <p class="text-gray-600 mb-8">Please login to continue.</p>
+                <a href="/api/login"
+                    class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-6 rounded transition-colors duration-200"
+                    onclick="window.location.href='/api/login'"
+                >
+                    Login
+                </a>
             </div>
         </div>    
     {{end}}
