--- a/web/templates/widget-list.tmpl
+++ b/web/templates/widget-list.tmpl
@@ -7,28 +7,28 @@
 {{define "content"}}
 
 <div class="bg-gray-100 min-h-screen">
-  <div class="flex items-center justify-center min-h-screen">
+  <div class="flex justify-center min-h-screen">
       <div class="w-full max-w-4xl bg-white rounded-2xl shadow-2xl p-6 my-8">
-          <h1 class="text-4xl font-semibold text-blue-600 mb-8 tracking-tight text-center">
+          <h1 class="text-4xl font-semibold text-gray-800 mb-8 tracking-tight text-center">
               Widgets
           </h1>
           <div class="overflow-x-auto rounded-lg">
               <table class="min-w-full bg-white rounded-lg shadow-md">
                   <thead>
                       <tr>
-                          <th class="px-6 py-4 text-left font-medium text-gray-600 uppercase tracking-wider bg-blue-50">
+                          <th class="px-6 py-4 text-left font-medium text-gray-600 tracking-wider bg-blue-50">
                               ID  
                           </th>
-                          <th class="px-6 py-4 text-left font-medium text-gray-600 uppercase tracking-wider bg-blue-50">
+                          <th class="px-6 py-4 text-left font-medium text-gray-600 tracking-wider w-52 bg-blue-50">
                               Name
                           </th>
-                          <th class="px-6 py-4 text-left font-medium text-gray-600 uppercase tracking-wider bg-blue-50">
+                          <th class="px-6 py-4 text-left font-medium text-gray-600 tracking-wider bg-blue-50">
                               Description
                           </th>
-                          <th class="px-6 py-4 text-left font-medium text-gray-600 uppercase tracking-wider bg-blue-50">
+                          <th class="px-6 py-4 text-left font-medium text-gray-600 tracking-wider bg-blue-50">
                               Created At
                           </th>
-                          <th class="px-6 py-4 text-left font-medium text-gray-600 uppercase tracking-wider bg-blue-50">
+                          <th class="px-6 py-4 text-left font-medium text-gray-600 tracking-wider bg-blue-50">
                               Updated At
                           </th>
                       </tr>
@@ -38,7 +38,12 @@
                       <tr class="hover:bg-blue-50 transition-colors duration-150">
                           <td class="px-6 py-4 text-gray-900">{{.ID}}</td>
                           <td class="px-6 py-4 text-blue-700 font-semibold">
-                            <a href="/widgets/{{.ID}}"> {{.Name}}</a>  
+                            <a 
+                              href="/widgets/{{.ID}}" 
+                              class="hover:text-pink-500 hover:bg-blue-50 transition-colors duration-300 px-2 py-1 rounded"
+                            >
+                              {{.Name}}
+                            </a>
                           </td>
                           <td class="px-6 py-4 text-gray-700">{{.Description}}</td>
                           <td class="px-6 py-4 text-gray-500">{{.CreatedAt.Format "2006-01-02 15:04:05"}}</td>
