added create widget modal

--- a/web/templates/navbar.tmpl
+++ b/web/templates/navbar.tmpl
@@ -17,7 +17,7 @@
             </div>
             <!-- Hamburger Icon (Mobile) -->
             <div class="md:hidden flex items-center">
-                <button @click="open = !open" class="outline-none">
+                <button @click="open = !open" class="cursor-pointer outline-none">
                     <svg class="w-7 h-7 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path x-show="!open" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                               d="M4 6h16M4 12h16M4 18h16"/>
