--- a/web/templates/base.tmpl
+++ b/web/templates/base.tmpl
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/static/img/icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/tailwind-styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <title>{{template "title" .}}</title>
 </head>
