--- a/web/templates/widget-list.tmpl
+++ b/web/templates/widget-list.tmpl
@@ -52,9 +52,6 @@
                   >
                     <div class="flex items-center justify-between mb-4">
                       <h2 class="text-xl font-semibold text-gray-800">Create Widget</h2>
-                      <button @click="showModal = false" class="text-gray-500 hover:text-gray-700 cursor-pointer">
-                        <span class="material-symbols-outlined">close</span>
-                      </button>
                     </div>
                     <form method="POST" action="/widgets">
                       <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
@@ -80,7 +77,14 @@
                           required
                         ></textarea>
                       </div>
-                      <div class="flex justify-end">
+                      <div class="flex justify-end space-x-2">
+                        <button 
+                          class="bg-gray-200 hover:bg-gray-300 text-gray-800 px-4 py-2 rounded cursor-pointer"
+                          @click="showModal = false"
+                          type="button"
+                        >
+                        Cancel
+                        </button>
                         <button
                           type="submit"
                           class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded cursor-pointer"
@@ -118,15 +122,15 @@
                   <tbody class="divide-y divide-gray-200">
                       {{range .Widgets}}
                       <tr class="hover:bg-blue-50 transition-colors duration-150">
-                          <td class="px-6 py-4 text-gray-900">{{.ID}}</td>
-                          <td class="px-6 py-4 text-blue-700 font-semibold">
+                          <td class="px-6 py-4 text-blue-700">
                             <a 
                               href="/widgets/{{.ID}}" 
                               class="hover:text-pink-500 hover:bg-blue-50 transition-colors duration-300 px-2 py-1 rounded"
                             >
-                              {{.Name}}
+                              {{.ID}}
                             </a>
                           </td>
+                          <td class="px-6 py-4 text-gray-700 font-semibold">{{.Name}}</td>
                           <td class="px-6 py-4 text-gray-700">{{.Description}}</td>
                           <td class="px-6 py-4 text-gray-500">{{.CreatedAt.Format "2006-01-02 15:04:05"}}</td>
                           <td class="px-6 py-4 text-gray-500">{{.UpdatedAt.Format "2006-01-02 15:04:05"}}</td>
